--- a/style/style.css
+++ b/style/style.css
@@ -83,3 +83,29 @@ body{
 
 
 }
+
+.thumb
+{
+    display: inline-block;
+    text-align: center;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    width: 250px;
+    height: 300px;
+    background-color: rgb(223, 223, 223);
+    white-space: normal;
+    overflow: auto
+}
+
+.thumbcontent
+{
+    padding: 10px;
+}
+
+img{
+    padding-top: 10px;
+    max-width: 200px;
+    max-height: 200px;
+    margin: auto;
+}
