--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@ body{
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url("../img/bg.png");
+  background-image: url("https://cdn.discordapp.com/attachments/777316759392092180/777502628984520715/bg_1.png");
   background-size: cover;
   outline: none;
 }
